--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "kotlin-kapt"
+    id("com.google.dagger.hilt.android")
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -56,6 +60,15 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+
+    //Dagger Hilt
+    implementation("com.google.dagger:hilt-android:2.44")
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation"androidx.hilt:hilt-navigation-compose:1.0.0-rc01"
+
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -63,4 +76,8 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+}
+
+kapt {
+    correctErrorTypes = true
 }
